--- a/html/error-handling.html
+++ b/html/error-handling.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Static HTML Demo</title>
-  <link rel="stylesheet" href="./lib/css/popup.css" />
+  <link rel="stylesheet" href="//embed.typeform.com/next/css/popup.css" />
   <style>
     html, body { font-family: sans-serif; font-size: 16px; }
     form { margin: 20px 0; padding: 10px; background: #ddd; }
@@ -39,7 +39,7 @@
 </form>
 
 <button id="error" onclick="foo.bar()">click here to trigger a javascript error</button>
-<script src="./lib/embed.js"></script>
+<script src="//embed.typeform.com/next/embed.js"></script>
 <script>
   const params = new URLSearchParams(window.location.search)
   const name = params.get('name')
